--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="/Users/dchetwyn/Documents/workspace/AuctionSniper/references/windowlicker-core-r268.jar"/>
 	<classpathentry kind="lib" path="/Users/dchetwyn/Documents/workspace/AuctionSniper/references/windowlicker-swing-r268.jar"/>
 	<classpathentry kind="lib" path="/Users/dchetwyn/Documents/workspace/AuctionSniper/references/windowlicker-web-r268.jar"/>
+	<classpathentry kind="lib" path="/Users/dchetwyn/GOOS-Auction-Sniper/references/org.apache.commons.io.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
